--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.18.0",
     "dotenv": "^5.0.1",
     "lodash": "^4.17.5",
+    "material-design-icons": "^3.0.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-infinite-scroller": "^1.1.3",
@@ -23,15 +24,46 @@
   },
   "reactToolbox": {
     "include": [
+      "APP_BAR",
+      "AUTOCOMPLETE",
       "BUTTON",
-      "DATE_PICKER"
+      "CARD",
+      "CHECKBOX",
+      "DIALOG",
+      "DRAWER",
+      "DROPDOWN",
+      "INPUT",
+      "LAYOUT",
+      "LINK",
+      "LIST",
+      "MENU",
+      "NAVIGATION",
+      "PROGRESS_BAR",
+      "RIPPLE",
+      "SLIDER",
+      "TOOLTIP"
     ],
     "customProperties": {
       "animation-duration": "0.3s",
-      "color-accent": "var(--palette-pink-a200)",
-      "color-accent-dark": "var(--palette-pink-700)",
-      "color-primary-contrast": "var(--color-dark-contrast)",
-      "color-accent-contrast": "var(--color-dark-contrast)"
+      "appbar-color": "var(--color-slate-grey)",
+      "appbar-contrast": "var(--color-light-grey)",
+      "color-blue": "#00A3DF",
+      "color-green": "#97C93D",
+      "color-red": "#ED3F60",
+      "color-yellow": "#F2BB1A",
+      "color-dark-blue": "#4A539F",
+      "color-dark-green": "#1B8C5C",
+      "color-dark-red": "#981C4D",
+      "color-orange": "#E47226",
+      "color-slate-grey": "#252531",
+      "color-light-grey": "#E2E3E4",
+      "color-divider": "var(--color-light-grey)",
+      "color-text": "var(--color-slate-grey)",
+      "color-primary": "var(--color-blue)",
+      "color-primary-dark": "var(--color-dark-blue)",
+      "color-accent": "var(--color-red)",
+      "color-accent-dark": "var(--color-dark-red)",
+      "input-text-error-color": "var(--color-red)"
     },
     "output": "src/assets/react-toolbox"
   }
