--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react-scripts": "1.1.1",
     "react-toolbox": "^2.0.0-beta.12",
     "react-toolbox-themr": "^1.0.2",
+    "redux": "^4.0.0",
+    "redux-actions": "^2.3.2",
     "soundcloud": "^3.3.0"
   },
   "scripts": {
