--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dotenv": "^5.0.1",
     "lodash": "^4.17.5",
     "material-design-icons": "^3.0.1",
+    "prop-types": "^15.6.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-infinite-scroller": "^1.1.3",
@@ -15,6 +16,7 @@
     "react-toolbox-themr": "^1.0.2",
     "redux": "^4.0.0",
     "redux-actions": "^2.3.2",
+    "reselect": "^3.0.1",
     "soundcloud": "^3.3.0"
   },
   "scripts": {
