--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dotenv": "^5.0.1",
     "lodash": "^4.17.5",
     "material-design-icons": "^3.0.1",
+    "prettier": "^1.12.1",
     "prop-types": "^15.6.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
