--- a/package.json
+++ b/package.json
@@ -6,16 +6,17 @@
     "axios": "^0.18.0",
     "lodash": "^4.17.5",
     "material-design-icons": "^3.0.1",
-    "prettier": "^1.12.1",
     "prop-types": "^15.6.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-infinite-scroller": "^1.1.3",
+    "react-redux": "^5.0.7",
     "react-scripts": "1.1.1",
     "react-toolbox": "^2.0.0-beta.12",
     "react-toolbox-themr": "^1.0.2",
     "redux": "^4.0.0",
     "redux-actions": "^2.3.2",
+    "redux-thunk": "^2.2.0",
     "reselect": "^3.0.1",
     "soundcloud": "^3.3.0"
   },
@@ -70,5 +71,8 @@
       "input-text-error-color": "var(--color-red)"
     },
     "output": "src/assets/react-toolbox"
+  },
+  "devDependencies": {
+    "prettier": "^1.12.1"
   }
 }
