--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-toolbox-themr": "^1.0.2",
     "redux": "^4.0.0",
     "redux-actions": "^2.3.2",
+    "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
     "reselect": "^3.0.1",
     "soundcloud": "^3.3.0"
