--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "axios": "^0.18.0",
     "lodash": "^4.17.5",
     "material-design-icons": "^3.0.1",
     "prop-types": "^15.6.1",
@@ -22,6 +21,8 @@
     "soundcloud": "^3.3.0"
   },
   "devDependencies": {
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
     "prettier": "^1.12.1"
   },
   "scripts": {
