--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "express": "^4.16.3",
     "lodash": "^4.17.5",
     "material-design-icons": "^3.0.1",
     "prop-types": "^15.6.1",
