--- a/package.json
+++ b/package.json
@@ -28,8 +28,9 @@
     "prettier": "^1.12.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "server": "node src/server/index.js",
+    "client": "react-scripts start",
+    "start": "node src/server/index.js",
+    "heroku-postbuild": "react-scripts build",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
