--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   "scripts": {
     "client": "react-scripts start",
     "start": "node src/server/index.js",
-    "heroku-postbuild": "react-scripts build",
+    "heroku-postbuild": "yarn && yarn run build",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
