--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "prop-types": "^15.6.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-modal": "^3.4.5",
     "react-redux": "^5.0.7",
     "react-scripts": "1.1.1",
-    "react-soundplayer": "^1.0.4",
     "react-toolbox": "^2.0.0-beta.12",
     "react-toolbox-themr": "^1.0.2",
     "redux": "^4.0.0",
