--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "express": "^4.16.3",
     "lodash": "^4.17.5",
     "material-design-icons": "^3.0.1",
+    "moment": "^2.22.2",
     "prop-types": "^15.6.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
@@ -43,6 +44,7 @@
       "BUTTON",
       "CARD",
       "CHECKBOX",
+      "CHIP",
       "DIALOG",
       "DRAWER",
       "DROPDOWN",
