--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "material-design-icons": "^3.0.1",
     "moment": "^2.22.2",
     "prop-types": "^15.6.1",
+    "rc-slider": "^8.6.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.7",
