--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "private": true,
   "proxy": "http://localhost:8000",
   "dependencies": {
+    "@material-ui/core": "^1.2.3",
+    "@material-ui/icons": "^1.1.0",
     "express": "^4.16.3",
     "lodash": "^4.17.5",
     "material-design-icons": "^3.0.1",
     "moment": "^2.22.2",
-    "prop-types": "^15.6.1",
+    "prop-types": "^15.6.2",
     "rc-slider": "^8.6.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
@@ -34,53 +36,6 @@
     "heroku-postbuild": "yarn && yarn run build",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "toolbox": "react-toolbox-themr"
-  },
-  "reactToolbox": {
-    "include": [
-      "APP_BAR",
-      "AUTOCOMPLETE",
-      "BUTTON",
-      "CARD",
-      "CHECKBOX",
-      "CHIP",
-      "DIALOG",
-      "DRAWER",
-      "DROPDOWN",
-      "INPUT",
-      "LAYOUT",
-      "LINK",
-      "LIST",
-      "MENU",
-      "NAVIGATION",
-      "PROGRESS_BAR",
-      "RIPPLE",
-      "SLIDER",
-      "TOOLTIP"
-    ],
-    "customProperties": {
-      "animation-duration": "0.3s",
-      "appbar-color": "var(--color-slate-grey)",
-      "appbar-contrast": "var(--color-light-grey)",
-      "color-blue": "#00A3DF",
-      "color-green": "#97C93D",
-      "color-red": "#ED3F60",
-      "color-yellow": "#F2BB1A",
-      "color-dark-blue": "#4A539F",
-      "color-dark-green": "#1B8C5C",
-      "color-dark-red": "#981C4D",
-      "color-orange": "#E47226",
-      "color-slate-grey": "#252531",
-      "color-light-grey": "#E2E3E4",
-      "color-divider": "var(--color-light-grey)",
-      "color-text": "var(--color-slate-grey)",
-      "color-primary": "var(--color-blue)",
-      "color-primary-dark": "var(--color-dark-blue)",
-      "color-accent": "var(--color-red)",
-      "color-accent-dark": "var(--color-dark-red)",
-      "input-text-error-color": "var(--color-red)"
-    },
-    "output": "src/assets/react-toolbox"
+    "eject": "react-scripts eject"
   }
 }
