Material UI transition complete

--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "dependencies": {
     "@material-ui/core": "^1.2.3",
     "@material-ui/icons": "^1.1.0",
+    "classnames": "^2.2.6",
     "express": "^4.16.3",
     "lodash": "^4.17.5",
-    "material-design-icons": "^3.0.1",
     "moment": "^2.22.2",
     "prop-types": "^15.6.2",
     "rc-slider": "^8.6.1",
@@ -16,8 +16,6 @@
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.7",
     "react-scripts": "1.1.1",
-    "react-toolbox": "^2.0.0-beta.12",
-    "react-toolbox-themr": "^1.0.2",
     "redux": "^4.0.0",
     "redux-actions": "^2.3.2",
     "redux-logger": "^3.0.6",
